--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -1,30 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Note Sharing</title>
-    <link rel="stylesheet" href="/public/style.css">
+    <%- include('../partials/header') %>
 </head>
 <body>
     <header class="display-flex justify-space-between align-center p-2">
-        <!-- <h1>
-            Registration
-        </h1>
-        <% if(isLoggedIn) { %>
-        <h2><%= user.name %></h2>
-        <% } %>
-        <% if(isLoggedIn) { %>
-            <nav><%= log in %></nav>
-        <%} else {%>
-            <nav><%= log out %></nav>    
-        <% } %> -->
         <%- include('../partials/header'); %>
     </header>
     
     <main>
-        <%- include('../partials/body') %>
+        <div>Hello!</div>
     </main>
 
     <footer>
