homepage.ejs finished

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -9,7 +9,8 @@
     </header>
     
     <main>
-        <div>Hello!</div>
+        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/signUp">Sign Up</a>
     </main>
 
     <footer>
