fixed middleware issue

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
         <li class="nav-item">
         <a class="nav-link" href="/homepage">Home</a>
         </li>
-        <% if (!isLoggedIn) { %>
+        <% if (!LoggedIn) { %>
          <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
          </li>
