--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('../partials/header') %>
+    <%- include('../partials/head') %>
 </head>
 <body>
     <header class="display-flex justify-space-between align-center p-2">
-        <%- include('../partials/header'); %>
+        <%- include('../partials/header') %>
     </header>
     
     <main>
