--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,21 +1,10 @@
- <!-- <h1>
-            Registration
-        </h1>
-        <% if(isLoggedIn) { %>
-        <h2><%= user.name %></h2>
-        <% } %>
-        <% if(isLoggedIn) { %>
-            <nav><%= log in %></nav>
-        <%} else {%>
-            <nav><%= log out %></nav>    
-        <% } %> -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/">Note Sharing</a>
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
         <a class="nav-link" href="/homepage">Home</a>
         </li>
-        <% if (!isLoggedIn) { %>
+        <% if (!loggedIn) { %>
          <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
          </li>
