add change callback

--- a/views/partials/quill/editor.ejs
+++ b/views/partials/quill/editor.ejs
@@ -10,7 +10,7 @@
     loadEditor("#editor-<%- id %>", "#content-<%- id %>");
   } else {
     globalThis.editors.push(() => {
-      loadEditor("#editor-<%- id %>", "#content-<%- id %>");
+      loadEditor("#editor-<%- id %>", "#content-<%- id %>",<%- editCallback || "()=>{}" %>);
     });
   }
 </script>
