--- a/views/partials/quill/editor.ejs
+++ b/views/partials/quill/editor.ejs
@@ -1,6 +1,7 @@
 <%const id = Math.random().toString(36).substring(2, 15);%>
 
 <div id="editor-<%- id %>"></div>
+<% if(note){ %>
 <script type="json/text" id="content-<%- id %>">
   <%- note.content %>
 </script>
@@ -14,3 +15,18 @@
     });
   }
 </script>
+<% } else { %>
+<script type="json/text" id="content-<%- id %>">
+  []
+</script>
+<script>
+  globalThis.editors = globalThis.editors || [];
+  if (globalThis.editorInitialized) {
+    loadEditor("#editor-<%- id %>", "#content-<%- id %>");
+  } else {
+    globalThis.editors.push(() => {
+      loadEditor("#editor-<%- id %>", "#content-<%- id %>",<%- editCallback || "()=>{}" %>);
+    });
+  }
+</script>
+<% } %>
