--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,39 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <%- include('../partials/header') %>
-</head>
-<body>
+  <head>
+    <%- include('./partials/head') %>
+  </head>
+  <body>
     <header class="display-flex justify-space-between align-center p-2">
-        <%- include('../partials/header'); %>
+      <%- include('./partials/header'); %>
     </header>
-    
-    <main>
-        <form class="signup-form">
-            <div>
-                <label for="username-signup">username</label>
-                <input type="text" id="username-signup"/>
-            </div>
-            <div>
-                <label for="email-signup">email</label>
-                <input type="text" id="email-signup"/>
-            </div>
-            <div>
-                <label for="password-signup">password</label>
-                <input type="password" id="password-signup"/>
-            </div>
-            <div>
-                <button type="submit">signup</button>
-            </div>
-        </form>
 
-        <a href="/login"> Need to login?</a>
+    <main>
+      <form class="signup-form">
+        <div>
+          <label for="username-signup">username</label>
+          <input type="text" id="username-signup" />
+        </div>
+        <div>
+          <label for="email-signup">email</label>
+          <input type="text" id="email-signup" />
+        </div>
+        <div>
+          <label for="password-signup">password</label>
+          <input type="password" id="password-signup" />
+        </div>
+        <div>
+          <button type="submit">signup</button>
+        </div>
+      </form>
+
+      <a href="/login"> Need to login?</a>
     </main>
 
-    <footer>
-        <%- include('../partials/footer') %>
-    </footer>
+    <footer><%- include('./partials/footer') %></footer>
 
     <script src="/signup.js"></script>
-</body>
+  </body>
 </html>
