--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,8 @@
     </li>
     <% } else {%>
     <li class="nav-item">
-      <a class="nav-link" href="/">Log out</a>
+      <a class="nav-link" href="#" id="logout">Log out</a>
+      <script src="/logout.js"></script>
     </li>
     <% } %>
   </ul>
