--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
         <li class="nav-item">
         <a class="nav-link" href="/homepage">Home</a>
         </li>
-        <% if (!LoggedIn) { %>
+        <% if (!loggedIn) { %>
          <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
          </li>
@@ -15,3 +15,4 @@
         <% } %>
     </ul>
 </nav>
+
