--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('../partials/header') %>
+    <%- include('./partials/header') %>
 </head>
 <body>
     <header class="display-flex justify-space-between align-center p-2">
-        <%- include('../partials/header'); %>
+        <%- include('./partials/header'); %>
     </header>
     
     <main>
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-        <%- include('../partials/footer') %>
+        <%- include('./partials/footer') %>
     </footer>
 </body>
 </html>
