--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
     <main>
        <form class="login-form">
         <div>
-            <label for="email-login"></label>
+            <label for="email-login">email:</label>
             <input type="text" id="email-login"/>
         </div>
         <div>
