--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,6 @@
-<p class="text-center text-muted">&copy; Copyright 2020 The Evil People</p>
+        
+        
+    </main>
+    <p class="text-center text-muted">&copy; Copyright 2020 The Evil People</p>
+</body>
+</html>
