--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,19 +1,39 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!DOCTYPE html>
+<html lang="en">
 
-  <a class="navbar-brand" href="/">Note Sharing</a>
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item">
-      <a class="nav-link" href="/">Home</a>
-    </li>
-    <% if (!loggedIn) { %>
-    <li class="nav-item">
-      <a class="nav-link" href="/login">Login</a>
-    </li>
-    <% } else {%>
-    <li class="nav-item">
-      <a class="nav-link" href="#" id="logout">Log out</a>
-      <script src="/logout.js"></script>
-    </li>
-    <% } %>
-  </ul>
-</nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Note Sharing</title>
+  <!-- pico css -->
+  <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css" /> -->
+  <link rel="stylesheet" href="/style.css" />
+  <!-- quill js  -->
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
+
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+    <a class="navbar-brand" href="/">Note Sharing</a>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/">Home</a>
+      </li>
+      <% if (!loggedIn) { %>
+      <li class="nav-item">
+        <a class="nav-link" href="/login">Login</a>
+      </li>
+      <% } else {%>
+      <li class="nav-item">
+        <a class="nav-link" href="#" id="logout">Log out</a>
+        <script src="/logout.js"></script>
+      </li>
+      <% } %>
+    </ul>
+  </nav>
+
+  <main>
