--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -1,20 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <%- include('../partials/head') %>
-</head>
-<body>
-    <header class="display-flex justify-space-between align-center p-2">
-        <%- include('../partials/header') %>
-    </header>
-    
-    <main>
-        <a class="nav-link" href="/login">Login</a>
-        <a class="nav-link" href="/signUp">Sign Up</a>
-    </main>
-
-    <footer>
-        <%- include('../partials/footer') %>
-    </footer>
-</body>
-</html>
+<%- include("../partials/header") %>
+  <h1 class="center-text">404 - Page Not Found</h1>
+<%- include("../partials/footer") %>
