--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,31 +9,34 @@
   <!-- pico css -->
   <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@1.*/css/pico.min.css">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css" /> -->
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
   <!-- quill js  -->
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
 
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-    <a class="navbar-brand" href="/">Note Sharing</a>
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/">Home</a>
+  <nav class="container-fluid">
+    <ul>
+      <li>
+        <a href="/" class="contrast"><strong>Noteable</strong></a>
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <a href="/">Home</a>
       </li>
       <% if (!loggedIn) { %>
-      <li class="nav-item">
-        <a class="nav-link" href="/login">Login</a>
+      <li>
+        <a href="/login">Login</a>
       </li>
       <% } else {%>
-      <li class="nav-item">
-        <a class="nav-link" href="#" id="logout">Log out</a>
+      <li>
+        <a href="#" id="logout">Log out</a>
         <script src="/logout.js"></script>
       </li>
       <% } %>
     </ul>
   </nav>
 
-  <main>
+  <main class="container">
