--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -1,3 +1,4 @@
 <%- include("../partials/header") %>
+<%= JSON.stringify(loggedIn) %>
   <h1 class="center-text">404 - Page Not Found</h1>
 <%- include("../partials/footer") %>
