--- a/views/pages/auth.ejs
+++ b/views/pages/auth.ejs
@@ -31,10 +31,10 @@
 				create a new account
 			</p>
 		</hgroup>
-		<form id="logout">
+		<form id="signup">
 			<label for="username">
 				Username
-				<input type="text" id="username" name="username" placeholder="FooBar123" required>
+				<input type="text" id="username" name="name" placeholder="FooBar123" required>
 			</label>
 			<label for="email2">
 				Email
