--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,3 +6,14 @@ html{
 .center-text{
 	text-align:center;
 }
+
+.parent {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-template-rows: repeat(5, 1fr);
+	grid-column-gap: 10px;
+	grid-row-gap: 10px;
+}
+
+.div2 { grid-area: 1 / 3 / 6 / 6 }
+.div1 { grid-area: 1 / 1 / 2 / 3 }
