--- a/views/pages/doc/view.ejs
+++ b/views/pages/doc/view.ejs
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="/css/doc.css" />
   <!-- quill js  -->
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
-	<%- include("../../partials/quill/editor-scripts") %>
 	<% if(theme === "dark" || !theme){ %>
 		<style>
 			*{
@@ -22,6 +21,6 @@
 </head>
 
 <body>
-	<%- include("../../partials/quill/editor",{note:doc,editCallback:editCallback}) %>
+	<%- include("../../partials/quill/render",{note:doc}) %>
 </body>
 </html>
