adjusting home.ejs

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -4,7 +4,7 @@
 <div class="parent">
     <div class="div1">
         
-        <button>+</button>
+        <a href="/note" role="button"> + </a>
     </div>
     <div class="div2">
         <iframe 
