fixed landing page sizing issue

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -4,11 +4,11 @@
 <div class="parent">
     <div class="div1">
         
-        <a href="/note" role="button"> + </a>
+        <button href="#"> + </button>
     </div>
     <div class="div2">
         <iframe 
-            src="/notes"
+            src="/internal/doc/?id={{docId}}"
             title="notes"
             width="600"
             height="400">
