fixed login/signup route error

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -3,12 +3,13 @@
 
 <div class="parent">
     <div class="div1">
-        
         <button href="#"> + </button>
+        <ul class="note-list">
+        </ul>
     </div>
     <div class="div2">
         <iframe 
-            src="/internal/doc/?id={{docId}}"
+            src="/views/pages/doc/view.ejs"
             title="notes"
             width="600"
             height="400">
