--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,3 +18,10 @@ html{
 .div1 { grid-area: 1 / 1 / 2 / 3 }
 .div2 { grid-area: 1 / 3 / 6 / 6 }
 
+.icon {
+	display: flex;
+	flex-direction: row;
+	float: right;
+	padding: 10px;
+}
+
