--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="/css/style.css" />
   <!-- quill js  -->
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
-
+  <!-- bootstrap icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 
 <body>
