--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,7 +25,7 @@
     </ul>
     <ul>
       <li>
-        <a href="/">Home</a>
+        <a href="/home">Home</a>
       </li>
       <% if (!loggedIn) { %>
       <li>
