--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,3 +6,21 @@ html{
 .center-text{
 	text-align:center;
 }
+
+.user-notes {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  margin: 3%;
+}
+
+@media screen and (max-width: 767px) {
+  .user-notes {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.card {
+  padding: 10px;
+  box-sizing: border-box;
+}
