--- a/public/css/doc.css
+++ b/public/css/doc.css
@@ -10,4 +10,32 @@ html[data-theme="light"]{
 html,body{
 	margin:0;
 	padding:0;
+  overflow: hidden;
+}
+
+.edit{
+	position: absolute;
+	right:0;
+	top:0;
+	width:64px;
+	height:64px;
+}
+
+.edit > a{
+	all:unset;
+	width:100%;
+	height:100%;
+	background-color: hsl(195deg, 85%, 41%);
+	border-radius: 50%;
+	transition: 0.5s;
+	display: grid;
+	place-items: center;
+}
+
+.edit > a > i {
+	transform: scale(1.5);
+}
+
+.edit:hover > a {
+	background-color: hsl(195deg, 85%, 50%);
 }
