--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,6 @@ body {
 .parent {
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
-	grid-template-rows: repeat(5, 1fr);
 	grid-column-gap: 10px;
 	grid-row-gap: 10px;
 }
@@ -69,3 +68,22 @@ body {
   margin-top: 10px;
   width: 100%;
 }
+iframe{
+  width:100%;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+}
+iframe:not([src]){
+  display: none;
+}
+iframe[src] + article{
+  display: none;
+} 
+
+iframe + article{
+  text-align: center;
+  width:100%;
+  height: 100%;
+  margin: 0;
+} 
