--- a/views/partials/quill/editor.ejs
+++ b/views/partials/quill/editor.ejs
@@ -3,15 +3,15 @@
 <div id="editor-<%- id %>"></div>
 <% if(note){ %>
 <script type="json/text" id="content-<%- id %>">
-  <%- note.content %>
+  <%- JSON.stringify(note) %>
 </script>
 <script>
   globalThis.editors = globalThis.editors || [];
   if (globalThis.editorInitialized) {
-    loadEditor("#editor-<%- id %>", "#content-<%- id %>");
+    loadEditor("#editor-<%- id %>", "#content-<%- id %>",<%- note.id %>);
   } else {
     globalThis.editors.push(() => {
-      loadEditor("#editor-<%- id %>", "#content-<%- id %>",<%- editCallback || "()=>{}" %>);
+      loadEditor("#editor-<%- id %>", "#content-<%- id %>",<%- note.id %>);
     });
   }
 </script>
@@ -22,10 +22,10 @@
 <script>
   globalThis.editors = globalThis.editors || [];
   if (globalThis.editorInitialized) {
-    loadEditor("#editor-<%- id %>", "#content-<%- id %>");
+    loadEditor("#editor-<%- id %>", "#content-<%- id %>",-1);
   } else {
     globalThis.editors.push(() => {
-      loadEditor("#editor-<%- id %>", "#content-<%- id %>",<%- editCallback || "()=>{}" %>);
+      loadEditor("#editor-<%- id %>", "#content-<%- id %>",-1);
     });
   }
 </script>
