--- a/views/partials/quill/editor.ejs
+++ b/views/partials/quill/editor.ejs
@@ -1,6 +1,18 @@
 <%const id = Math.random().toString(36).substring(2, 15);%>
-
-<div id="editor-<%- id %>"></div>
+<link href="/css/tag.css" rel="stylesheet" />
+<label for="title">
+  <input type="text" name="title" id="title" value="<%- note ? note.title : "" %>" placeholder="Unknown Note"/>
+</label>
+<h3 class="header">Tags</h3>
+<% console.log(note) %>
+<div class="tags">
+  <% for(const tag of note.tags){ %>
+    <span class="tag editable" data-content="<%=tag.message%>" data-color="<%=tag.color%>" data-color2="<%=tag.darkColor%>" data-theme="<%=theme%>"></span>
+  <% } %>
+  <span class="tag add" data-content="✏️" data-color="blue" data-color2="blue" data-theme="dark"></span>
+</div>
+<br/>
+<div id="editor-<%- id %>" ></div>
 <% if(note){ %>
 <script type="json/text" id="content-<%- id %>">
   <%- JSON.stringify(note) %>
@@ -11,7 +23,7 @@
     loadEditor("#editor-<%- id %>", "#content-<%- id %>",<%- note.id %>);
   } else {
     globalThis.editors.push(() => {
-      loadEditor("#editor-<%- id %>", "#content-<%- id %>",<%- note.id %>);
+      loadEditor("#editor-<%- id %>", "#content-<%- id %>",<%- note.id  %>);
     });
   }
 </script>
