--- a/public/css/doc.css
+++ b/public/css/doc.css
@@ -30,6 +30,7 @@ html,body{
 	transition: 0.5s;
 	display: grid;
 	place-items: center;
+	cursor: pointer;
 }
 
 .edit > a > i {
@@ -37,10 +38,11 @@ html,body{
 }
 
 .edit:hover > a {
+	border-radius: 35%;
 	background-color: hsl(195deg, 85%, 50%);
 }
 
-input {
+input#title {
 	all:unset;
 	width:100%;
 	padding: 8px;
@@ -70,4 +72,11 @@ input::before {
 	display: inline-table;
 	text-align: center;
 	font-weight: 900;
+}
+
+#add-tag{
+	display: inline;
+}
+#add-tag input{
+	all:unset;
 }
