--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,15 +12,23 @@ body {
 	text-align:center;
 }
 
+#main-page {
+  margin: 1% 10% 1% 1%;
+}
+
 .parent {
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
+	grid-template-rows: repeat(5, 1fr);
 	grid-column-gap: 10px;
 	grid-row-gap: 10px;
 }
 
-.div1 { grid-area: 1 / 1 / 2 / 3 }
-.div2 { grid-area: 1 / 3 / 6 / 6 }
+.div1 { 
+  grid-area: 1 / 1 / 2 / 3 
+}
+.div2 { 
+  grid-area: 1 / 3 / 6 / 6 }
 
 .icon {
 	display: flex;
@@ -29,12 +37,34 @@ body {
 	padding: 10px;
 }
 
+.note-title {
+  margin: 0.3rem 0;
+  width: 85%;
+  display: inline-block;
+  text-align: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+@media screen and (max-width: 767px) {
+  .parent {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .note-title {
+    margin: 2px 0;
+    width: 48%;
+  }
+}
+
 /* from brian */
-.tags {
+/* .tags {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
-} */
+}
 
 .user-notes {
   display: flex;
@@ -67,23 +97,4 @@ body {
   flex-wrap: wrap;
   margin-top: 10px;
   width: 100%;
-}
-iframe{
-  width:100%;
-  height: 100%;
-  margin: 0;
-  overflow: hidden;
-}
-iframe:not([src]){
-  display: none;
-}
-iframe[src] + article{
-  display: none;
-} 
-
-iframe + article{
-  text-align: center;
-  width:100%;
-  height: 100%;
-  margin: 0;
-} 
+} */
