--- a/views/pages/auth.ejs
+++ b/views/pages/auth.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/header") %>
-<script src="/login.js" defer></script>
+<script src="js/login.js" defer></script>
 <article class="grid" data-visible="signin" id="login-root">
 	<div data-is="login">
 		<hgroup>
