--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header') %>
-<script src="/home.js" defer></script>
+<script src="js/home.js" defer></script>
 <div>
     <form>
         <input type="search" id="search" name="search" placeholder="Search Tags">
