--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,7 +35,7 @@
       <% } else {%>
       <li>
         <a href="#" id="logout">Log out</a>
-        <script src="/logout.js"></script>
+        <script src="js/logout.js"></script>
       </li>
       <% } %>
     </ul>
