--- a/views/partials/quill/editor-scripts.ejs
+++ b/views/partials/quill/editor-scripts.ejs
@@ -1,2 +1,2 @@
 <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-<script src="/editor.js"></script>
+<script src="js/editor.js"></script>
