fix some minor css

--- a/public/css/doc.css
+++ b/public/css/doc.css
@@ -80,3 +80,10 @@ input::before {
 #add-tag input{
 	all:unset;
 }
+
+.user-notes {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 5%;
+  }
